# AIT

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/.astro/: settings.json
frontend/src/components/dynamic/: NavBar.tsx
frontend/src/layouts/: Footer.astro  Header.astro  Layout.astro
frontend/src/pages/: about.astro  index.astro
frontend/src/styles/: global.css
