[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio = { version = "1.47.1", features = ["full"] }
sea-orm = { version = "1.1.16", features = [
    "sqlx-postgres",      
    "runtime-tokio-native-tls", 
    "macros"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10.73"
tokio-openssl = "0.6"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
